Added model viewer, debug command