@@ -2,7 +2,6 @@ package org.jortvanschijndel.resourcepackManager;
 
 import net.kyori.adventure.text.Component;
 import net.kyori.adventure.text.minimessage.MiniMessage;
-import org.bukkit.Bukkit;
 import org.bukkit.Material;
 import org.bukkit.NamespacedKey;
 import org.bukkit.command.Command;
@@ -20,32 +19,41 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 public class CommandManager implements CommandExecutor, TabCompleter {
 
     private final ResourcepackManager plugin;
     private final MiniMessage miniMessage = MiniMessage.miniMessage();
+    private final ModelViewer modelViewer;
 
     public CommandManager(ResourcepackManager plugin) {
         this.plugin = plugin;
+        this.modelViewer = new ModelViewer(plugin);
+        plugin.getServer().getPluginManager().registerEvents(modelViewer, plugin);
     }
 
     @Override
     public boolean onCommand(@NotNull CommandSender sender, @NotNull Command command, @NotNull String label, String @NotNull [] args) {
         if (command.getName().equalsIgnoreCase("give-model")) {
-            return handleGiveModel(sender, args);
+            handleGiveModel(sender, args);
+            return true;
+        }
+
+        if (command.getName().equalsIgnoreCase("models")) {
+            handleModelViewer(sender, args);
+            return true;
         }
 
         if (command.getName().equalsIgnoreCase("rmp")) {
             if (args.length == 0) {
                 Component parsed = miniMessage.deserialize(
-                        "<gradient:#5e4fa2:#f79459>ResourcepackManagerPlus</gradient> <gray>v" + plugin.getDescription().getVersion() + "</gray><br>" +
+                        "<gradient:#5e4fa2:#f79459>ResourcepackManagerPlus</gradient> <gray>v" + plugin.getPluginMeta().getVersion() + "</gray><br>" +
                                 "<dark_gray>»</dark_gray> <gold>/rmp reload</gold> <dark_gray>-</dark_gray> <gray>Reloads the configuration.</gray><br>" +
                                 "<dark_gray>»</dark_gray> <gold>/rmp status</gold> <dark_gray>-</dark_gray> <gray>Shows the current status.</gray><br>" +
                                 "<dark_gray>»</dark_gray> <gold>/rmp seturl <url></gold> <dark_gray>-</dark_gray> <gray>Sets the allowed URL for resource packs.</gray><br>" +
                                 "<dark_gray>»</dark_gray> <gold>/rmp debug</gold> <dark_gray>-</dark_gray> <gray>Toggles debug mode.</gray><br>" +
-                                "<dark_gray>»</dark_gray> <gold>/rmp give-model <item> <category> <model></gold> <dark_gray>-</dark_gray> <gray>Gives a custom model.</gray>"
+                                "<dark_gray>»</dark_gray> <gold>/rmp give-model <item> <category> <model></gold> <dark_gray>-</dark_gray> <gray>Gives a custom model.</gray><br>" +
+                                "<dark_gray>»</dark_gray> <gold>/rmp model-viewer [search]</gold> <dark_gray>-</dark_gray> <gray>Opens the model viewer GUI.</gray>"
                 );
                 sender.sendMessage(parsed);
                 return true;
@@ -60,7 +68,8 @@ public class CommandManager implements CommandExecutor, TabCompleter {
                 case "seturl" -> handleSetUrl(sender, subArgs);
                 case "debug" -> handleDebug(sender);
                 case "give-model" -> handleGiveModel(sender, subArgs);
-                default -> sender.sendMessage("Unknown subcommand. Usage: /rmp <reload|status|seturl|debug|give-model>");
+                case "model-viewer" -> handleModelViewer(sender, subArgs);
+                default -> sender.sendMessage("Unknown subcommand. Usage: /rmp <reload|status|seturl|debug|give-model|model-viewer>");
             }
             return true;
         }
@@ -68,17 +77,17 @@ public class CommandManager implements CommandExecutor, TabCompleter {
     }
 
     @Override
-    public @Nullable List<String> onTabComplete(@NotNull CommandSender sender, @NotNull Command command, @NotNull String alias, @NotNull String[] args) {
+    public @Nullable List<String> onTabComplete(@NotNull CommandSender sender, @NotNull Command command, @NotNull String alias, String @NotNull [] args) {
         if (command.getName().equalsIgnoreCase("give-model")) {
             return handleGiveModelTabComplete(args);
         }
 
         if (command.getName().equalsIgnoreCase("rmp")) {
             if (args.length == 1) {
-                List<String> subCommands = Arrays.asList("reload", "status", "seturl", "debug", "give-model");
+                List<String> subCommands = Arrays.asList("reload", "status", "seturl", "debug", "give-model", "model-viewer");
                 return subCommands.stream()
                         .filter(s -> s.startsWith(args[0].toLowerCase()))
-                        .collect(Collectors.toList());
+                        .toList();
             } else if (args.length > 1) {
                 if (args[0].equalsIgnoreCase("give-model")) {
                     return handleGiveModelTabComplete(Arrays.copyOfRange(args, 1, args.length));
@@ -88,20 +97,20 @@ public class CommandManager implements CommandExecutor, TabCompleter {
         return Collections.emptyList();
     }
 
-    private boolean handleGiveModel(CommandSender sender, String[] args) {
+    private void handleGiveModel(CommandSender sender, String[] args) {
         if (!sender.hasPermission("resourcepackmanager.give-model")) {
             sender.sendMessage(miniMessage.deserialize("<red>You don't have permission to use this command.</red>"));
-            return true;
+            return;
         }
 
         if (!(sender instanceof Player player)) {
             sender.sendMessage(miniMessage.deserialize("<red>This command can only be used by players.</red>"));
-            return true;
+            return;
         }
 
         if (args.length < 3) {
             sender.sendMessage(miniMessage.deserialize("<red>Usage: /give-model <item> <category> <model></red>"));
-            return true;
+            return;
         }
 
         String itemName = args[0];
@@ -110,25 +119,25 @@ public class CommandManager implements CommandExecutor, TabCompleter {
 
         List<String> matchingModels = plugin.getPackInspector().getModels(category).stream()
                 .filter(s -> s.substring(s.lastIndexOf('/') + 1).equalsIgnoreCase(modelName))
-                .collect(Collectors.toList());
+                .toList();
 
         if (matchingModels.isEmpty()) {
             sender.sendMessage(miniMessage.deserialize("<red>Model not found: " + modelName + "</red>"));
-            return true;
+            return;
         }
 
         if (matchingModels.size() > 1) {
             sender.sendMessage(miniMessage.deserialize("<red>Ambiguous model name. Multiple models found: " + matchingModels + "</red>"));
-            return true;
+            return;
         }
 
-        String modelPath = matchingModels.get(0);
+        String modelPath = matchingModels.getFirst();
         String shortModelName = modelPath.substring(modelPath.lastIndexOf('/') + 1);
 
         Material material = Material.matchMaterial(itemName);
         if (material == null) {
             sender.sendMessage(miniMessage.deserialize("<red>Invalid material: " + itemName + "</red>"));
-            return true;
+            return;
         }
 
         ItemStack item = new ItemStack(material);
@@ -139,7 +148,7 @@ public class CommandManager implements CommandExecutor, TabCompleter {
                 item.setItemMeta(meta);
             } catch (IllegalArgumentException e) {
                 sender.sendMessage(miniMessage.deserialize("<red>Invalid namespace or key: " + category + ":" + shortModelName + "</red>"));
-                return true;
+                return;
             }
         }
 
@@ -149,7 +158,6 @@ public class CommandManager implements CommandExecutor, TabCompleter {
         }
 
         sender.sendMessage(miniMessage.deserialize("<green>Given model successfully.</green>"));
-        return true;
     }
 
     private List<String> handleGiveModelTabComplete(String[] args) {
@@ -159,20 +167,34 @@ public class CommandManager implements CommandExecutor, TabCompleter {
                     .map(Material::name)
                     .map(String::toLowerCase)
                     .filter(name -> name.startsWith(args[0].toLowerCase()))
-                    .collect(Collectors.toList());
+                    .toList();
         } else if (args.length == 2) {
             return plugin.getPackInspector().getNamespaces().stream()
                     .filter(s -> s.startsWith(args[1].toLowerCase()))
-                    .collect(Collectors.toList());
+                    .toList();
         } else if (args.length == 3) {
             String category = args[1];
             return plugin.getPackInspector().getModels(category).stream()
                     .map(s -> s.substring(s.lastIndexOf('/') + 1))
                     .filter(s -> s.startsWith(args[2].toLowerCase()))
                     .distinct()
-                    .collect(Collectors.toList());
+                    .toList();
         }
         return Collections.emptyList();
+    }
+
+    private void handleModelViewer(CommandSender sender, String[] args) {
+        if (!sender.hasPermission("resourcepackmanager.model-viewer")) {
+            sender.sendMessage(miniMessage.deserialize("<red>You don't have permission to use this command.</red>"));
+            return;
+        }
+        if (!(sender instanceof Player player)) {
+            sender.sendMessage(miniMessage.deserialize("<red>This command can only be used by players.</red>"));
+            return;
+        }
+
+        String search = args.length > 0 ? String.join(" ", args) : null;
+        modelViewer.open(player, search);
     }
 
     private void handleReload(CommandSender sender) {
